# task-1-DNK

./: CMakeLists.txt  DNK-task_1.docx  DNK.cpp  DNK.h  RNK.h  library.h
Test/: CMakeLists.txt  DNK.cpp  RNK.cpp  main.cpp
